contact us button fix color contrast

--- a/src/style/_contact.scss
+++ b/src/style/_contact.scss
@@ -1,5 +1,5 @@
 .contact--button {
-    background: rgb(0, 173, 106);
+    background: #008552;
     padding: .6rem 1.2rem;
     color: #fff;
     font-weight: 700;
