--- a/src/style/general.css
+++ b/src/style/general.css
@@ -691,7 +691,7 @@ img {
   }
 }
 .contact--button {
-  background: rgb(0, 173, 106);
+  background: #008552;
   padding: 0.6rem 1.2rem;
   color: #fff;
   font-weight: 700;
